Fixed the alignment of the form, however it has affected the input filed for the email invites (There is now padding in the field) and the input in the team event input boxes. Dont merge as it is. Commiting to checkout of branch

--- a/src/main/resources/static/CreateEventPage.css
+++ b/src/main/resources/static/CreateEventPage.css
@@ -120,6 +120,7 @@ width:50%;
 
   #teaminput{
       padding: 1rem;
+      width: 2rem;
   }
 
 #returnattendees {
@@ -186,11 +187,6 @@ tr:nth-child(even) {
     border: none;
     font-size: 17px;
 }
-
-  
-  #teaminput {
-    width:2rem;
-  }
 
 
   #eventtitle {
